# Video-Audio-Preprocessing

./: CONTRIBUTING.md  LICENSE  README.md  environment.yml  main.py  preprocess_slurm.sh  preprocess_slurm_1.sh  preprocess_slurm_2.sh  preprocess_slurm_3.sh  preprocess_slurm_4.sh  preprocess_utilities.py  pyproject.toml  requirements.txt  slurm.sh  slurm_init.sh
src/video_audio_preprocessing/: algorithms.py  divide_participants.py  main.py  preprocess_utilities.py
tests/: test_fibonacci.py
