[tool.poetry]
name = "video_audio_preprocessing"
version = "0.1.0"
description = "this repository extracts audio from video recordings, concatenates multiple segments of the same participant session, and resamples the waveform to the selected sample rate"
authors = ["kimit0310 <iktae.kim@childmind.org>"]
license = "GNU Lesser General Public License v3.0"
readme = "README.md"
packages = [{include = "video_audio_preprocessing", from = "src"}]

[tool.poetry.dependencies]
python = "~3.11"
pyloudnorm = "0.1.1"
ffmpeg-python = "0.2.0"
numpy = "1.24.3"
tqdm = "4.65.0"
torch = "2.3.0"
torchaudio = "2.3.0"
sox = "14.4.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
mypy = "^1.9.0"
pre-commit = "^3.7.0"
pytest-cov = "^5.0.0"
ruff = "^0.3.5"

[tool.poetry.group.docs.dependencies]
pdoc = "^14.4.0"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = [
  "tests"
]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv"
]
line-length = 88
indent-width = 4
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
select = ["ANN", "D", "E", "F", "I"]
ignore = [
  "ANN101",  # self should not be annotated.
  "ANN102"  # cls should not be annotated.
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
