[tool.poetry]
name = "video-audio-preprocessing"
version = "0.1.0"
description = "this repository extracts audio from video recordings, concatenates multiple segments of the same participant session, and resamples the waveform to the selected sample rate"
authors = ["Celia Maiorano <celia.maiorano@childmind.org>, Iktae Kim <iktae.kim@childmind.org>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pyloudnorm = "0.1.1"
ffmpeg-python = "^0.2.0"
matplotlib = "3.7.2"
numpy = "1.24.3"
tqdm = "4.65.0"
torch = "2.0.0"
torchaudio = "2.0.1"
scipy = "1.11.1"
sentence_transformers = "1"
scikit-learn = "1.3.0"
transformers = "4.38.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
